--- a/src/index.css
+++ b/src/index.css
@@ -65,7 +65,11 @@ div.nav {
   z-index: 5;
   position: fixed;
   top: 4vh;
-  left: 4vw;
+  left: 50%;
+  padding:16px;
+-webkit-transform:translate(0%, -50%);
+-ms-transform:translate(0%, -50%);
+transform:translate(0%, -50%);
   right: auto;
   height: 35vh;
   width: auto;
