--- a/src/index.css
+++ b/src/index.css
@@ -75,16 +75,28 @@ div.nav {
   width: auto;
   transition: 0.3s;
   mix-blend-mode: difference;
-  animation: hue 1s ease-in-out infinite alternate;
-  animation: contrast 1s ease-in-out infinite alternate;
-  animation: brightness 3.7s ease-in-out infinite alternate;
-  animation: unbrightness 3.8s ease-in-out infinite alternate;
-  animation: brightness 3.3s ease-in-out infinite alternate;
-  animation: unbright 3.2s ease-in-out infinite alternate;
-  animation: brightness 3.63s ease-in-out infinite alternate;
-  animation: unbrightness 3s ease-in-out infinite alternate;
-  animation: brightness 3s ease-in-out infinite alternate;
-  animation: unbright 1s ease-in-out infinite alternate;
+
+  background-color: #ff00004d;
+  border-radius: 50%;
+animation:brightness 1.7s ease-in-out infinite alternate;
+animation:hue 1.7s ease-in-out infinite alternate;
+
+
+}
+@keyframes brightness {
+  0% {
+    opacity: 80;
+    filter: brightness(100%);
+    filter: hue-rotate(-359deg);
+
+  }
+  100% {
+opacity: 90;
+filter: brightness(155%);
+filter: hue-rotate(359deg);
+
+  }
+
 }
 
 #igLogo {
