--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
 body {
   font-family: "Courier New", monospace;
-  background-color: #000000;
+  transition: 5s;
+}
+#root{
+    background-color: #000000;
   background-image: url('https://i.imgur.com/gRVV7mn.jpg');
   background-repeat: no-repeat;
 background-attachment: fixed;
 background-position: center;
-  transition: 5s;
-}
 
+}
 img {
   height: inherit;
   object-fit: cover;
