--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
-  font-family: "Courier New", monospace;
+  font-family: "Monaco", italic;
+  font-style: italic;
   background-color: #d8e8ef;
   background-image: url('https://i.imgur.com/gRVV7mn.jpg');
   background-repeat: no-repeat;
@@ -12,11 +13,24 @@ img {
   height: inherit;
   object-fit: cover;
 }
+img.profpic{
+  border-radius: 50%;
+  border-color: #0f00003c;
+  width: 25vw;
+  animation:brightness 1.7s ease-in-out infinite alternate;
 
+}
 h2 {
   color: white;
   font-size: 3em;
-  background-color: rgba(255, 255, 255, 0.2352941176);
+  width: fit-content;
+  text-align: center;
+}
+h1 {
+  color: white;
+  font-size: 2em;
+  text-transform: uppercase;
+
 }
 
 a, a.visited, a.active {
@@ -27,16 +41,20 @@ a, a.visited, a.active {
 div.nav {
   position: fixed;
   top: 5vh;
-  left: 3.5vw;
+  left: 15%;
   z-index: 5;
-  background-color: white;
+  background-color: #ffffff7c;
   width: fit-content;
-  font-size: 12pt;
+  font-size: 1.1em;
   text-decoration: none;
   color: #F0C0C9;
   transition: 1s;
+  filter: brightness(1.1);
 }
-
+.contactBox{
+  text-align: center;
+  transform: translateX(-50%);
+}
 .imgSvg {
   z-index: 6;
 }
@@ -65,7 +83,7 @@ div.nav {
   list-style: none;
 }
 
-#TitleLogo {
+img.TitleLogo {
   z-index: 5;
   position: fixed;
   top: 2vh;
