--- a/src/index.css
+++ b/src/index.css
@@ -2,18 +2,35 @@ body {
   font-family: "Monaco", italic;
   font-style: italic;
   background-color: #d8e8ef;
-  background-image: url('https://i.imgur.com/gRVV7mn.jpg');
   background-repeat: no-repeat;
 background-attachment: fixed;
 background-position: center;
   transition: 5s;
 }
-
+.above{
+  z-index: 3;
+}
+.imagelistspan{
+  position: absolute;
+  z-index: 2;
+}
+img.bgimg{
+  z-index: 1;
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+  background-position: center;
+  background-size: contain;
+}
 img {
+  z-index: 2;
   height: inherit;
   object-fit: cover;
 }
 img.profpic{
+  z-index: 2;
   border-radius: 50%;
   border-color: #0f00003c;
   width: 25vw;
